Updated build for automatic snapshot publishing